[tool.poetry]
name = "cash-balance"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cash_balance"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.1"
sqlmodel = "^0.0.8"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
python-dotenv = "^0.21.0"
argon2-cffi = "^21.3.0"
pyjwt = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
